<?xml version="2.0"?>
<package format="2">
  <name>roomba</name>
  <version>1.0.0</version>
  <description>
    Package for turtlebot3 navigation to act as a roomba, exploring all areas of map. Goal 90% explorable area covered. 
  </description>
  <license>BSD</license>
  <author>Kris Swartzbaugh</author>
  <author email="swartzbaugh.k@gmail.com">Kris</author>
  <maintainer email = "swartzbaugh.k@gmail.com">Kris Swartzbaugh</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
